[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/InfoModal.gd" type="Script" id=2]

[node name="InfoModal" instance=ExtResource( 1 )]
custom_constants/margin_right = 32
custom_constants/margin_top = 42
custom_constants/margin_left = 32
custom_constants/margin_bottom = 42
script = ExtResource( 2 )

[node name="NinePatchRect" parent="." index="0"]
margin_left = 32.0
margin_top = 42.0
margin_right = 288.0
margin_bottom = 198.0

[node name="MarginContainer" parent="NinePatchRect" index="0"]
custom_constants/margin_top = 13

[node name="ContentContainer" parent="NinePatchRect/MarginContainer" index="0"]
margin_top = 13.0
margin_right = 240.0
margin_bottom = 125.0
custom_constants/separation = 6

[node name="Title" parent="NinePatchRect/MarginContainer/ContentContainer" index="0"]
margin_right = 224.0
margin_bottom = 22.0
text = "Item Name"
valign = 1

[node name="Hint" type="Label" parent="NinePatchRect/MarginContainer/ContentContainer" index="1"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dolor arcu, tincidunt at velit nec, luctus ornare velit. Sed luctus neque diam, sed aliquet sem aliquam nec."
align = 1
valign = 1
autowrap = true

[node name="ButtonContainer" parent="NinePatchRect/MarginContainer/ContentContainer" index="2"]
margin_top = 101.0
margin_right = 224.0

[node name="BackButton" type="Button" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="0"]
margin_right = 224.0
margin_bottom = 11.0
text = "Got it!"

[connection signal="tree_exiting" from="." to="." method="_on_InfoModal_tree_exiting"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/BackButton" to="." method="_on_Button_pressed"]
